# cpp-sdk

./: CMakeLists.txt  CNAME  README.md  check-version.py  vcpkg.json
.github/workflows/: ci.yml  linters.yml
docs/: Doxyfile.in  README.md
examples/: BucketExists.cc  ComposeObject.cc  CopyObject.cc  DeleteBucketLifecycle.cc  DeleteBucketNotification.cc  DeleteBucketPolicy.cc  DeleteBucketReplication.cc  DeleteBucketTags.cc  DeleteObjectLockConfig.cc  DeleteObjectTags.cc  DisableObjectLegalHold.cc  DownloadObject.cc  EnableObjectLegalHold.cc  GetBucketLifecycle.cc  GetBucketNotification.cc  GetBucketPolicy.cc  GetBucketReplication.cc  GetBucketTags.cc  GetBucketVersioning.cc  GetObject.cc  GetObjectLockConfig.cc  GetObjectProgress.cc  GetObjectRetention.cc  GetObjectTags.cc  GetPresignedObjectUrl.cc  GetPresignedPostFormData.cc  IsObjectLegalHoldEnabled.cc  ListBuckets.cc  ListObjects.cc  ListenBucketNotification.cc  MakeBucket.cc  PutObject.cc  PutObjectProgress.cc  RemoveBucket.cc  RemoveObject.cc  RemoveObjects.cc  SelectObjectContent.cc  SetBucketEncryption.cc  SetBucketLifecycle.cc  SetBucketNotification.cc  (+9 more)
include/miniocpp/: args.h  baseclient.h  client.h  config.h  credentials.h  error.h  http.h  providers.h  request.h  response.h  select.h  signer.h  sse.h  types.h  utils.h
src/: args.cc  baseclient.cc  client.cc  credentials.cc  error.cc  http.cc  providers.cc  request.cc  response.cc  select.cc  signer.cc  sse.cc  types.cc  utils.cc
tests/: tests.cc
